--- a/platform/Windows/rednukem.vcxproj.filters
+++ b/platform/Windows/rednukem.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClInclude Include="..\..\source\rr\src\n64\reality_sbar.h">
       <Filter>Header Files\n64</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\rr\src\ap_integration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\rr\src\actors.cpp">
@@ -328,6 +331,9 @@
     </ClCompile>
     <ClCompile Include="..\..\source\rr\src\n64\reality_sbar.cpp">
       <Filter>Source Files\n64</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\rr\src\ap_integration.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
