--- a/platform/Windows/props/build_x64.props
+++ b/platform/Windows/props/build_x64.props
@@ -8,7 +8,7 @@
       <PreprocessorDefinitions>NOASM=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>.\lib\APCpp;.\lib\64\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>.\lib\64\</AdditionalLibraryDirectories>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
