--- a/source/rr/rsrc/gameres.rc
+++ b/source/rr/rsrc/gameres.rc
@@ -5,19 +5,19 @@
 RSRC_ICON ICON "game_icon.ico"
 RSRC_BMP BITMAP "game.bmp"
 
-WIN_STARTWIN DIALOGEX DISCARDABLE  20, 40, 260, 200
+WIN_STARTWIN DIALOGEX DISCARDABLE  20, 40, 260, 264
 STYLE DS_MODALFRAME | DS_CENTER | DS_SETFONT | DS_FIXEDSYS | WS_OVERLAPPED | WS_CAPTION | WS_VISIBLE | WS_SYSMENU
 CAPTION "Startup"
 FONT 8, "MS Shell Dlg"
 BEGIN
-	CONTROL "", WIN_STARTWIN_BITMAP, "STATIC", SS_BITMAP | SS_CENTERIMAGE | WS_CHILD | WS_VISIBLE, 0, 0, 66, 172
-	CONTROL "", WIN_STARTWIN_TABCTL, WC_TABCONTROL, WS_CLIPSIBLINGS | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 5, 5, 250, 170
-	CONTROL "&Start", WIN_STARTWIN_START, "BUTTON", BS_DEFPUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 154, 180, 48, 14
-	CONTROL "&Cancel", WIN_STARTWIN_CANCEL, "BUTTON", BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 207, 180, 48, 14
+	CONTROL "", WIN_STARTWIN_BITMAP, "STATIC", SS_BITMAP | SS_CENTERIMAGE | WS_CHILD | WS_VISIBLE, 0, 0, 66, 236
+	CONTROL "", WIN_STARTWIN_TABCTL, WC_TABCONTROL, WS_CLIPSIBLINGS | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 5, 5, 250, 234
+	CONTROL "&Start", WIN_STARTWIN_START, "BUTTON", BS_DEFPUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 154, 244, 48, 14
+	CONTROL "&Cancel", WIN_STARTWIN_CANCEL, "BUTTON", BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 207, 244, 48, 14
 
 	CONTROL "", WIN_STARTWIN_MESSAGES, "EDIT", ES_MULTILINE | ES_READONLY | WS_CHILD | WS_VSCROLL, 0, 0, 32, 32
 END
-WIN_STARTWINPAGE_CONFIG DIALOGEX DISCARDABLE  20, 40, 279, 168
+WIN_STARTWINPAGE_CONFIG DIALOGEX DISCARDABLE  20, 40, 279, 232
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg"
@@ -37,6 +37,18 @@ BEGIN
 	CONTROL "",               IDCGAMEDIR, "COMBOBOX", CBS_DROPDOWNLIST | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_TABSTOP, 10, 99, 226, 156
 	CONTROL "&Enable ""autoload"" folder", IDCAUTOLOAD, "BUTTON", BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 5, 116, 100, 8
 	CONTROL "&Always show this window at startup", IDCALWAYSSHOW, "BUTTON", BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 118, 116, 140, 8
+
+    CONTROL "",               -1, "STATIC", SS_GRAYRECT | WS_CHILD | WS_BORDER | WS_VISIBLE | SS_SUNKEN, 5, 134, 231, 1
+    CONTROL "&Archipelago",   -1, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 20, 130, 38, 8
+    CONTROL "&Server:", 	  -1, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 5, 144, 40, 8
+    CONTROL "archipelago.gg:",               IDCAPSERVER, "EDIT", ES_LEFT | WS_CHILD | WS_VISIBLE | WS_BORDER | WS_TABSTOP, 40, 142, 196, 12
+    CONTROL "&User:", 	  -1, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 5, 160, 40, 8
+    CONTROL "",               IDCAPUSER, "EDIT", ES_LEFT | WS_CHILD | WS_VISIBLE | WS_BORDER | WS_TABSTOP, 40, 158, 76, 12
+    CONTROL "&Password:", 	  -1, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 120, 160, 40, 8
+    CONTROL "",               IDCAPUSER, "EDIT", ES_LEFT | WS_CHILD | WS_VISIBLE | WS_BORDER | WS_TABSTOP, 160, 158, 76, 12
+    CONTROL "&Local World:",  -1, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 5, 176, 50, 8
+	CONTROL "",               IDCAPLOCALGAME, "COMBOBOX", CBS_DROPDOWNLIST | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_TABSTOP, 50, 174, 186, 156
+
 END
 
 #define FILEVER        1,9,9,9
@@ -64,8 +76,8 @@ BEGIN
             VALUE "FileDescription", "Rednukem"
             VALUE "FileVersion", STRFILEVER
             VALUE "InternalName", "Rednukem"
-            VALUE "LegalCopyright", "Copyright © 2018 EDuke32 Developers, 1996, 2003 3D Realms Entertainment"
-            VALUE "LegalTrademarks", "Duke Nukem® is a Registered Trademark of Gearbox Software, LLC."
+            VALUE "LegalCopyright", "Copyright ï¿½ 2018 EDuke32 Developers, 1996, 2003 3D Realms Entertainment"
+            VALUE "LegalTrademarks", "Duke Nukemï¿½ is a Registered Trademark of Gearbox Software, LLC."
             VALUE "OriginalFilename", "rednukem.exe"
             VALUE "ProductName", "Rednukem"
             VALUE "ProductVersion", STRPRODUCTVER
